# CWTeamsCpp

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
src/: CWPlayer.cpp  CWPlayer.h  ExcelUtils.cpp  ExcelUtils.h  GenerateTeams.cpp  GenerateTeams.h  Main.cpp  Main.h  PlayerRestrictor.cpp  PlayerRestrictor.h  RatingsReader.cpp  RatingsReader.h  Weights.cpp  Weights.h
